--- a/weather-app.html
+++ b/weather-app.html
@@ -7,20 +7,30 @@
   <!-- Bootstrap CDN (optional) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background: #f8f9fa; }
-    weather-card {
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  padding: 24px;
-  background: #fff;
-  btn-primary {
-  background: #0077ff;
-  border-radius: 8px;
-  font-weight: 600;
-  padding: 10px 24px;
-}
-}
-  </style>
+    <style>
+  body {
+    background: #f8f9fa;
+  }
+
+  .weather-card {
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 24px;
+    background: #fff;
+  }
+
+  .btn-primary {
+    background-color: #0077ff;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+    padding: 10px 24px;
+  }
+
+  .btn-primary:hover {
+    background-color: #005fcc;
+  }
+</style>
 </head>
 <body>
   <div class="container">
